src/containers/possibility/possibility.css
.gpt3__possibility {
  display: flex;
  flex-direction: row;
}

.gpt3__possibility-image {
  flex: 1;
  display: flex;
  justify-content: flex-start;
  align-items: center;

  margin-right: 2rem;
}

.gpt3__possibility-image img {
  width: 100%;
  height: 100%;
}

.gpt3__possibility-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
}

.gpt3__possibility-content h4 {
  color: #71e5ff;
  font-family: var(--font-family);
  font-size: 16px;
  font-weight: 500;
  line-height: 30px; /* 187.5% */
}

.gpt3__possibility-content h4:last-child {
  color: #ff8a71;
}
.gpt3__possibility-content h1 {
  font-family: var(--font-family);
  font-size: 34px;
  font-weight: 800;
  line-height: 45px; /* 132.353% */

  margin: 1rem 0;
}

.gpt3__possibility-content p {
  color: var(--color-text);
  font-family: var(--font-family);
  font-size: 16px;
  font-weight: 400;
  line-height: 30px; /* 187.5% */

  margin-bottom: 2rem;
}

/* @MEDIA________________________________________________________________________________________ */

@media screen and (max-width: 950px) {
  .gpt3__possibility {
    flex-direction: column;
  }

  .gpt3__possibility-image {
    margin: 1rem 0;
  }

  .gpt3__possibility-image img {
    width: unset;
    height: unset;
  }

  .gpt3__possibility-content {
    margin-top: 2rem;
  }
}

@media screen and (max-width: 700px) {
  .gpt3__possibility-image img {
    width: 100%;
    height: 100%;
  }
}

